--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    font-family: theme('fontFamily.sans');
+    font-family: "Fira Sans", sans-serif;
   }
   /* Prevent horizontal shift/overflow on initial load across all pages */
   html, body {
@@ -915,4 +915,17 @@
   .snowflake:nth-child(18) { animation-duration: 13.5s; animation-delay: 0.7s; }
   .snowflake:nth-child(19) { animation-duration: 8.8s; animation-delay: 3.8s; }
   .snowflake:nth-child(20) { animation-duration: 14.5s; animation-delay: 1.7s; }
+
+  /* Fira Sans font classes */
+  .fira-sans-regular {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .fira-sans-bold {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
 }
